# dj-gpt

./: .gitignore  README.md  pyproject.toml
_legacy/new_lyrics_scraper/: config.py  scrape.py  test_notebook.ipynb  tor_controller.py
_legacy/new_lyrics_scraper/lyrics/: a.csv
_legacy/new_lyrics_scraper/notebooks/: scrape_lyrics_batch.py
_legacy/new_lyrics_scraper/scraper/: azlyrics.py  csv_writer.py  string_cleaner.py
insta_scraping/: all_post_likes.csv  already_scraped_hashtags.csv
insta_scraping/dorfterror_database/: backup.py  database_structure.py  formatting_utils.py  setup_database.ipynb
insta_scraping/filtered_datasets/: all_dorfterror_comments.parquet  all_dorfterror_non_follower_profiles.parquet  all_dorfterror_posts.parquet  all_post_likes.parquet  posts_categories.parquet
insta_scraping/insta_analytics_notebooks/: analytics_notebook.ipynb  categorization_notebook.ipynb  dorfterror_feature_engineered.parquet  model_training.ipynb  post_generation_notebook.ipynb  utils.py  visualization_notebook.ipynb
insta_scraping/model_training/dorfterror_image_df_results_like_count/: X_train.parquet  final_model.pkl  metadata.json  y_test.parquet  y_train.parquet
insta_scraping/scraped_data/: already_scraped_hashtags.csv  dorfterror_comments.csv  dorfterror_non_follower_profiles.csv  dorfterror_profile_info.csv  follower_info.json
insta_scraping/scraping_notebooks/: bright_data_scraping.ipynb  follower_scraping.js  instaloader_scraping.ipynb  scrape_profile_info_manualy.txt  utils.py
streamlit_app/: app.py
streamlit_app/scraper/: azlyrics_scraper.py
(+65 files in other folders)
