[project]
name = "dj-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asn1crypto>=1.5.1",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.4",
    "browser-cookie3>=0.20.1",
    "bs4>=0.0.2",
    "certifi>=2025.4.26",
    "cffi>=1.17.1",
    "chardet>=5.2.0",
    "cryptography>=45.0.4",
    "docker>=7.1.0",
    "fake-useragent>=2.2.0",
    "idna>=3.10",
    "instaloader>=4.14.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "lxml>=5.4.0",
    "psycopg2-binary>=2.9.10",
    "pycparser>=2.22",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.1.0",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "six>=1.17.0",
    "soupsieve>=2.7",
    "sqlalchemy>=2.0.41",
    "stem>=1.8.2",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "urllib3>=2.4.0",
    "wrapt>=1.17.2",
]
